<resources>
    <string name="app_name">Android Portfolio Brief</string>
    <string name="home">Home</string>
    <string name="about_me">About me</string>
    <string name="course">Course</string>
    <string name="contact">Contact</string>
    <string name="works">Works</string>
    <string name="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi atque, commodi dolores incidunt laboriosam maxime necessitatibus, nostrum numquam quis quos vero voluptas! Beatae numquam perspiciatis quia voluptatem voluptatum! Dolorum, nostrum!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_section_title">Home Section Title</string>
    <string name="image">Image Description Exemple</string>
    <string name="about_section_title"><![CDATA[</About-me>]]></string>
    <string name="who_am_i_subtitile">Who am I?</string>
    <string name="who_am_i_content">A true enthusiast of new technologies My qualities: I\'m not a genius or a prodigy I\'m not a gifted developer / designer I don\'t know everything about programming and design I have too many skills to learn that I can\'t help but learn from day to day I have a lot of skills acquired that I feel confident around my fellow developer / designer of the same generation I know my value, I trade my time for money. My main fault: I am a perfectionist My best Friend: Google Center of interest: -documentation on Telegram MDN FreecodeCamp ... -Motivation and video tutorial on Youtube ...</string>
    <string name="contact_section_title"><![CDATA[</Contact me>]]></string>
    <string name="my_email">dieyemouhamet1@gmail.com</string>
    <string name="my_phone_number">+221 77 449 59 25</string>
    <string name="my_address">Dakar Keur Massar</string>
    <string name="placeholder_email">Enter your mail</string>
    <string name="placeholder_name">Enter your name</string>
    <string name="placeholder_message">Type your message here</string>
    <string name="tech_skills_subtitle">Tech-Skills</string>
    <string name="soft_skills_subtitle">Soft Skills</string>
    <string name="name">Mouhamet Dieye</string>
    <string name="prefession">FullStack Developper And Designer</string>
</resources>