<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_section_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="ifContentScrolls"
    tools:context=".about.AboutSection">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/about_section_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:text="@string/about_section_title"
        android:textColor="@color/indigo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/who_am_i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/who_am_i_subtitile"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_section_title" />

    <TextView
        android:id="@+id/who_am_i_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="10sp"
        android:text="@string/who_am_i_content"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/who_am_i"
        app:layout_constraintTop_toBottomOf="@+id/who_am_i" />

    <FrameLayout
        android:id="@+id/container_tech_skills"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:minHeight="100dp"
        app:layout_constraintEnd_toEndOf="@+id/who_am_i_content"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="@+id/who_am_i_content"
        app:layout_constraintTop_toBottomOf="@+id/who_am_i_content">


    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>