<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contact.ContactSection">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/contact_section_titile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/contact_section_title"
        android:textColor="@color/indigo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/who_am_i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="Want Join me, It's free "
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_section_titile" />

    <ImageView
        android:id="@+id/location_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_location_on_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/who_am_i"
        app:tint="@color/indigo" />

    <TextView
        android:id="@+id/location_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/my_address"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/location_icon"
        app:layout_constraintStart_toEndOf="@+id/location_icon"
        app:layout_constraintTop_toTopOf="@+id/location_icon" />

    <ImageView
        android:id="@+id/call_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_call_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_icon"
        app:tint="@color/indigo" />

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/my_phone_number"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/call_icon"
        app:layout_constraintStart_toEndOf="@+id/call_icon"
        app:layout_constraintTop_toTopOf="@+id/call_icon" />

    <ImageView
        android:id="@+id/email_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_email_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/call_icon"
        app:tint="@color/indigo" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/my_email"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/email_icon"
        app:layout_constraintStart_toEndOf="@+id/email_icon"
        app:layout_constraintTop_toTopOf="@+id/email_icon" />
    <!--
    <EditText
        android:id="@+id/editTextTextEmailUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter your name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/email_user_label"
        app:layout_constraintTop_toBottomOf="@id/email_user_label" />
    -->

    <!--

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:elevation="12dp"
        android:hint="@string/placeholder_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/email_user_label"
        app:layout_constraintTop_toBottomOf="@id/email_user_label">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
-->


    <!--this is the filled layout box for the edit text-->
    <!--this layout must be used to reposition or change
        the height and width of the edit text-->

    <!--sample button to submit entered data
        inside from edit text-->

    <!--text view which previews the entered data by user-->

    <TextView
        android:id="@+id/name_user_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Name"
        app:layout_constraintStart_toStartOf="@id/who_am_i"
        app:layout_constraintTop_toBottomOf="@+id/email_icon" />


    <EditText
        android:id="@+id/editTextTextUserName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="username"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/placeholder_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/gray_900"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/name_user_label"
        app:layout_constraintTop_toBottomOf="@+id/name_user_label" />

    <TextView
        android:id="@+id/email_user_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Email"
        app:layout_constraintStart_toStartOf="@id/name_user_label"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextUserName" />


    <EditText
        android:id="@+id/editTextTextUserMail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/placeholder_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/gray_900"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/email_user_label"
        app:layout_constraintTop_toBottomOf="@+id/email_user_label" />


    <TextView
        android:id="@+id/message_user_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Message"
        app:layout_constraintStart_toStartOf="@id/editTextTextUserMail"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextUserMail" />


    <EditText
        android:id="@+id/editTextTextUserMessage"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="message"
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/placeholder_message"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="@color/gray_900"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/message_user_label"
        app:layout_constraintTop_toBottomOf="@+id/message_user_label" />


    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send"
        android:layout_marginTop="18dp"
        android:paddingHorizontal="40dp"
        app:layout_constraintStart_toStartOf="@+id/editTextTextUserMessage"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextUserMessage"
        />

</androidx.constraintlayout.widget.ConstraintLayout>